@@ -1,0 +1,4 @@
+## Process this file with automake to produce Makefile.in   -*-Makefile-*-
+
+SUBDIRS = pebbles \
+          .
