@@ -1,0 +1,13 @@
+## Process this file with automake to produce Makefile.in -*-Makefile-*-
+
+pebblesdir = $(datadir)/pebbles
+
+dist_pebbles_DATA = \
+    bbox.peb
+    compactmenu.peb
+    linkbox.peb
+    rbox.peb
+    SquareTabs.peb
+    section.peb
+    selbox.peb
+    simplemenu.peb
