@@ -1,6 +1,7 @@
 2008-02-29  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
 	* src/main/Makefile.am (SUBDIRS): Added 'bedrock' to list
+	* src/main/bedrock/Makefile.am: new file
 
 	* src/main/resources/htdocs/Makefile.am: new file
 	* src/main/resources/Makefile.am (SUBDIRS): Added 'htdocs' to list
